--- a/homework01/index.html
+++ b/homework01/index.html
@@ -38,9 +38,8 @@
         </div>
         <br>
         <hr>
-        <br>
         <div>
-            <button id="reStart">Restart</button>
+            <h1 style="text-align: center;">🍉Press space to start!🍉</h1>
         </div>
     </div>
     <script src="scripts/main.js"></script>
