--- a/8-Puzzle/index.html
+++ b/8-Puzzle/index.html
@@ -127,7 +127,7 @@
 </main>
 <script src="scripts/node.js"></script>
 <script src="scripts/Astar.js"></script>
-<script src="scripts/IDAstar.js"></script>
+<script src="scripts/IDAStar.js"></script>
 <script src="scripts/config.js"></script>
 <script src="scripts/tools.js"></script>
 <script src="scripts/listeners.js"></script>
