--- a/DoubleSnake/index.html
+++ b/DoubleSnake/index.html
@@ -15,7 +15,7 @@
         <div class="mainWindow">
             <table id="gameWindow"></div>
             <div id="selectWindow">
-                <h1>🐍Double Snake🐍</h1>
+                <h2 align="center">🐍Double Snake🐍</h2>
                 <hr>
                     <p>① 玩家控制左上角黑蛇移动</p>
                     <p>② WSAD键控制上下左右</p>
